--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -10,11 +10,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository with submodules
+      - name: Checkout repository (no submodules yet)
         uses: actions/checkout@v4
         with:
-          submodules: recursive   # 拉取子模块
-          fetch-depth: 0          # 不用浅克隆，确保能读取完整历史（包括 .gitmodules）
+          fetch-depth: 0  # 拉完整历史
+
+      - name: Sync and init submodules
+        run: |
+          git submodule sync --recursive
+          git submodule update --init --recursive
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
